@@ -70,8 +70,8 @@
         <antcall target="build"/>
     </target>
     <target name="JustThinkIt">
-        <java classname="Main" failonerror="true" fork="yes">
-            <jvmarg line="--module-path &quot;C:\Users\Admin\Desktop\Java\javafx-sdk-11.0.2\lib&quot; --add-modules javafx.controls,javafx.fxml"/>
+        <java classname="application.Main" failonerror="true" fork="yes">
+            <jvmarg line="--module-path &quot;C:\Users\Admin\Desktop\Java\javafx-sdk-11.0.2\lib&quot; --add-modules javafx.controls,javafx.fxml,javafx.base,javafx.graphics&#13;&#10;--add-exports javafx.base/com.sun.javafx.collections=ALL-UNNAMED&#13;&#10;--add-exports javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED"/>
             <classpath refid="run.JustThinkIt.classpath"/>
         </java>
     </target>
